# GameDevelopment

./: .gitignore  ARCHITECTURE_RULES.md  ATTACK_ARROW_IMPLEMENTATION_SUMMARY.md  BOOTSTRAP_MODAL_CONVERSION.md  BRIGADE_MODEL_FIX_SUMMARY.md  BaseEntity_Inheritance_Summary.md  CLEANUP_SUMMARY.md  COMBAT_SIMULATION_USAGE_GUIDE.md  COMPONENT_LIBRARY_DOCUMENTATION.md  COMPREHENSIVE_SIMULATION_EXPLANATION.md  CompleteTestWorkflow.md  Complete_Error_Fixes_Summary.md  DAL_QUICK_REFERENCE.md  DATABASE_INTEGRATION.md  DATABASE_MIGRATION_README.md  DATA_MANAGEMENT_SIMPLIFIED.md  DEBUG_DATA_ENTRY.md  DEVELOPER_QUICK_REFERENCE.md  DatabaseScript.sql  FINAL_ATTACK_ARROW_IMPLEMENTATION.md  ID_Type_Fixes_Summary.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  MissingComponents.md  NATO_ATTACK_ARROW_FINAL_CORRECT.md  NATO_INTEGRATION_COMPLETE.md  PERFORMANCE_ANALYSIS.md  QUICK_START_GUIDE.md  Security_Properties_Cleanup_Summary.md  TECHNICAL_DOCUMENTATION.md  TILESERVER-SETUP-GUIDE.md  TILES_QUICKSTART.md  TILE_SERVER_QUICKSTART.md  TILE_SERVER_SETUP.md  TOKEN_SUMMARY_MODES.md  TechWebSol.csproj  TechWebSol.sln  TestWorkflow.md  Views_Audit_Complete.md  (+9 more)
Constants/: AppConstants.cs  MilitaryConstants.cs
Controllers/: AccountController.cs  AdminTokenController.cs  AttackPlanningController.cs  DataManagementController.cs  DefenseElementApiController.cs  ErrorController.cs  GameManagementController.cs  GamePlayController.cs  HomeController.cs  (+13 more)
wwwroot/Touch web Based/: CMakeLists.txt  index.html  script.js  styles.css  test_distance.html  touch_log.txt
(+686 files in other folders)
